get webview_url value in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KotlinWebView</string>
+    <string name="webview_url">https://github.com/saepulfariz</string>
 </resources>
